WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111106
CodeBlock::valueProfile() has a bogus assertion
https://bugs.webkit.org/show_bug.cgi?id=111106
Summary
CodeBlock::valueProfile() has a bogus assertion
Filip Pizlo
Reported
2013-02-28 13:25:00 PST
<
rdar://problem/13131427
>
Attachments
the patch
(2.87 KB, patch)
2013-02-28 13:29 PST
,
Filip Pizlo
mhahnenberg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2013-02-28 13:29:08 PST
Created
attachment 190797
[details]
the patch
Filip Pizlo
Comment 2
2013-02-28 13:30:01 PST
Comment on
attachment 190797
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=190797&action=review
> Source/JavaScriptCore/ChangeLog:9 > + This was just a bad assertion: m_bytecodeOffset means that the value profile is constructed but not initialized.
should say: This was just a bad assertion: m_bytecodeOffset == -1 means that the value profile is constructed but not initialized.
Mark Hahnenberg
Comment 3
2013-02-28 13:30:46 PST
Comment on
attachment 190797
[details]
the patch r=me
Filip Pizlo
Comment 4
2013-02-28 13:33:21 PST
Landed in
http://trac.webkit.org/changeset/144356
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug